# zelmedia

./: .gitignore  CreateTestData.ps1  LICENSE  Movie-Maneger.py  README.md  main.py  miniRename.py  movie_cli.py  paths.pkl  pyproject.toml  requirements.txt  test.py  utils.py
PreVersions/: V1.py  V2-1.py  V2-2.py
movie_manager/: __init__.py  constants.py  links.py  markdown.py  metadata.cache.json  metadata.py  paths.py  rename.py
movie_manager/data/: paths.json
src/zelmedia/: __init__.py  cli.py
src/zelmedia/core/: __init__.py  constants.py  links.py  markdown.py  metadata.py  paths.py  rename.py  scan.py
src/zelmedia/ui/: __init__.py
