[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# ───────────────────────────── package meta ─────────────────────────────
[project]
name = "zelmedia"
version = "5.0.0"
description = "CLI to organise movies and emit Markdown notes"
authors = [{ name = "Zeldean" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# runtime deps (keep light; add more when needed)
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "tqdm>=4.67",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

# console-script entry point  →  ~/.local/bin/zelmedia
[project.scripts]
zelmedia = "zelmedia.cli:movie"      # movie = Click group in cli.py

# ─────────────────────────── src-layout hint ────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

# include read-only assets in the wheel (e.g. default.css, icons)
[tool.setuptools.package-data]
zelmedia = ["assets/*"]
