[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# ───────────────────────────── package meta ─────────────────────────────
[project]
name = "zelmedia"
version = "5.0.1"
description = "CLI to organise movies and emit Markdown notes."
authors = [{ name = "Zeldean" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }  # changed from 'text' to 'file' (recommended)
keywords = ["cli", "movies", "markdown", "tmdb"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

# runtime dependencies
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "tqdm>=4.67",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

# console script (adds 'zelmedia' command)
[project.scripts]
zelmedia = "zelmedia.cli:movie"

# ─────────────────────────── src-layout hint ────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

# include asset files in wheel (optional; read-only only)
[tool.setuptools.package-data]
zelmedia = ["assets/*"]
